src/test/deca/syntax/valid/SansObjet/Cast-void.deca
// Description:
//    Casting a float to a void and assigning to float
//
// Results:
//     (nothing)
//
// History:
//    created on 14/01/2022

{
    float x =  2.3;
    float y = (void) (x);

}
