src/test/deca/syntax/invalid/SansObjet/Cast-void.deca
// Description:
//    Casting a float to an integer and assigning to float
//
// Results:
//     2.0
//
// History:
//    created on 14/01/2022

{
    float x =  2.3;
    float y = (void) (x);

    print(y);
}
